--- a/templates/pasien.html
+++ b/templates/pasien.html
@@ -44,6 +44,7 @@
 
             {% if session.get('role') == 'admin' %}
             <td>
+                <a href="/panduan/{{ p.id }}" class="btn btn-info btn-sm">Lihat Panduan</a>
                 <a href="/edit/{{ p.id }}" class="btn btn-warning btn-sm">Edit</a>
                 <a href="/hapus/{{ p.id }}" class="btn btn-danger btn-sm"
                    onclick="return confirm('Hapus data ini?')">
