--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/pasien">Data Pasien</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/panduan_user">Lihat Panduan</a>
+                </li>
             </ul>
 
             <span class="navbar-text text-white me-3">
